[package]
name = "rusty-wire"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for generating WireGuard configurations"

[[bin]]
name = "wg-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
base64 = "0.22.1"
rand = "0.9.2"
curve25519-dalek = "4.1.3"
qr2term = { version = "0.3.3", optional = true }

[features]
default = []
qr = ["qr2term"]

# Optimize for size and performance
[profile.release]
opt-level = 3
lto = "fat" 
codegen-units = 1
panic = "unwind"  # Allow recovery from panics
strip = true
debug = false
incremental = false
overflow-checks = true  # Worth the cost for monitoring
debug-assertions = false