[package]
name = "rusty-wire"
version = "0.1.2"
edition = "2024"
description = "A CLI tool for generating WireGuard configurations"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
base64 = "0.22.1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "getrandom"] }
qr2term = { version = "0.3.3", optional = true }

[features]
default = []
qr = ["qr2term"]

# Optimize for size and performance
[profile.release]
opt-level = 3
lto = "fat" 
codegen-units = 1
panic = "unwind" 
strip = true
debug = false
incremental = false
overflow-checks = true  
debug-assertions = false